--- a/src/css/layout/_footer.sass
+++ b/src/css/layout/_footer.sass
@@ -1,17 +1,17 @@
 .footer
-	background-color: $dark
+	background-color: $body-color
 	margin-top: $spacer * 2
 	padding: $spacer
-	color: $gray-100
+	color: $gray-500
 	text-align: center
 
 	a
-		color: $gray-100
+		color: inherit
 		font-weight: bold
 		transition: ease-in-out .1s
 
 		&:hover, &:active, &:focus
-			color: $gray-100
+			color: $gray-300
 			text-decoration: none
 
 	.container-fluid
