--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -35,7 +35,7 @@
 // ), $grays)
 //
 // $blue:    rgba(61, 150, 203, 1)
-$blue:    #0984e3
+$blue:    #1E88AE
 // $indigo:  #6610f2 !default
 // $purple:  #6f42c1 !default
 // $pink:    #e83e8c !default
@@ -140,10 +140,10 @@ $enable-shadows:            true
 // // Body
 // //
 // // Settings for the `<body>` element.
-//
+
 $body-bg:                   #f5f5f5
-// $body-color:                $gray-900 !default
-//
+$body-color:                #292b2c
+
 // // Links
 // //
 // // Style anchor elements.
