--- a/src/css/layout/_header.sass
+++ b/src/css/layout/_header.sass
@@ -17,7 +17,7 @@ header
 			.navbar-nav
 				background-color: white
 
-				.nav-item a
+				.nav-link
 					font-size: $font-size-base
 
 			.header-icons
