--- a/src/css/amp.sass
+++ b/src/css/amp.sass
@@ -1,266 +1,276 @@
 // Variables
-@import "../bower_components/bootstrap/scss/variables"
-@import "variables.sass"
-@import "components/typography"
-@import "components/tags"
+@import '../../node_modules/bootstrap/scss/functions'
+@import '../../node_modules/bootstrap/scss/variables'
+@import 'variables'
+@import 'components/fonts'
+// @import '../../node_modules/font-awesome/scss/font-awesome'
+@import 'components/typography'
+@import 'components/tags'
+@import 'components/social-media'
 
-@mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints)
-    $min: breakpoint-min($name, $breakpoints)
-    @if $min
-        @media (min-width: $min)
-            @content
-    @else
-        @content
 
-@import "components/social"
+// Generic WP styling
 
-/* Generic WP styling */
+.alignright
+    float: right
 
-// .alignright
-	// float: right
-//
-// .alignleft
-	// float: left
-//
+.alignleft
+    float: left
+
 .aligncenter
-	display: block
-	margin-left: auto
-	margin-right: auto
+    display: block
+    margin-left: auto
+    margin-right: auto
 
 .amp-wp-enforced-sizes
-	/** Our sizes fallback is 100vw, and we have a padding on the container the max-width here prevents the element from overflowing. **/
-	max-width: 100%
-	margin: 0 auto
+    // Our sizes fallback is 100vw, and we have a padding on the container the max-width here prevents the element from overflowing.
+    margin: 0 auto
+    max-width: 100%
 
-.amp-wp-unknown-size img
-	/** Worst case scenario when we can't figure out dimensions for an image. **/
-	/** Force the image into a box of fixed dimensions and use object-fit to scale. **/
-	object-fit: contain
+.amp-wp-unknown-size >
+    // Worst case scenario when we can't figure out dimensions for an image
+    // Force the image into a box of fixed dimensions and use object-fit to scale
+    object-fit: contain
 
-/* Template Styles */
+// Template Styles
 
 body
-	font-family: 'Merriweather', 'Times New Roman', Times, Serif
-	font-weight: 300
-	line-height: 1.75em
+    // font-family: 'Roboto', 'sans-serif'
+    font-weight: 300
+    line-height: 1.75em
 
 p,
 ol,
 ul,
 figure
-	margin: 0 0 1em
-	padding: 0
+    margin: 0 0 1em
+    padding: 0
 
-/* Quotes */
+.custom-logo-link
+    height: auto
+    width: 64px
 
-// blockquote
-// 	background: rgba(127,127,127,.125)
-// 	margin: 8px 0 24px 0
-// 	padding: 16px
+// Quotes
 
-// blockquote p:last-child
-// 	margin-bottom: 0
+blockquote
+    // background: rgba(127,127,127,.125)
+    margin: 8px 0 24px
+    padding: 16px
 
-/* UI Fonts */
+    p
+        :last-child
+            margin-bottom: 0
 
-.amp-wp-meta,
-.amp-wp-header div,
-.wp-caption-text,
-.amp-wp-tax-category,
-.amp-wp-tax-tag,
-.amp-wp-comments-link,
-.amp-wp-footer p,
-.back-to-top
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif
+// UI Fonts
 
-/* Header */
+// .amp-wp-meta,
+// .amp-wp-header,
+// .wp-caption-text,
+// .amp-wp-tax-category,
+// .amp-wp-tax-tag,
+// .amp-wp-comments-link,
+// .amp-wp-footer,
+// .back-to-top
+//     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif
 
-.amp-wp-header div
-	font-size: 1em
-	font-weight: 400
-	margin: 0 auto
-	max-width: calc(840px - 32px)
-	padding: .875em 16px
-	position: relative
+// Header
 
-/* Article */
+.amp-wp-header
+    div
+        font-size: 1em
+        font-weight: 400
+        margin: 0 auto
+        max-width: calc(840px - 32px)
+        padding: .875em 16px
+        position: relative
+
+// Article
 
 .amp-wp-article
-	font-weight: 400
-	margin: 1.5em auto
-	max-width: 840px
-	overflow-wrap: break-word
-	word-wrap: break-word
+    font-weight: 400
+    margin: 1.5em auto
+    max-width: 840px
+    overflow-wrap: break-word
+    word-wrap: break-word
 
-/* Article Header */
+// Article Header
 
 .amp-wp-article-header
-	align-items: center
-	align-content: stretch
-	display: flex
-	flex-wrap: wrap
-	justify-content: space-between
-	margin: 1.5em 16px 1.5em
+    align-content: stretch
+    align-items: center
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    margin: 1.5em 16px
 
-/* Article Meta */
+    .amp-wp-meta
+        :last-of-type
+            text-align: right
+
+        :first-of-type
+            text-align: left
+
+// Article Meta
 
 .amp-wp-meta
-	display: inline-block
-	flex: 2 1 50%
-	font-size: .875em
-	line-height: 1.5em
-	margin: 0
-	padding: 0
+    display: inline-block
+    flex: 2 1 50%
+    font-size: .875em
+    line-height: 1.5em
+    margin: 0
+    padding: 0
 
-.amp-wp-article-header .amp-wp-meta:last-of-type
-	text-align: right
+// .amp-wp-article-header
 
-.amp-wp-article-header .amp-wp-meta:first-of-type
-	text-align: left
+.amp-wp-byline
+    amp-img,
+    .amp-wp-author
+        display: inline-block
+        vertical-align: middle
 
-.amp-wp-byline amp-img,
-.amp-wp-byline .amp-wp-author
-	display: inline-block
-	vertical-align: middle
+    amp-img
+        border-radius: 50%
+        margin-right: 6px
+        position: relative
 
-.amp-wp-byline amp-img
-	border-radius: 50%
-	position: relative
-	margin-right: 6px
 .amp-wp-posted-on
-	text-align: right
+    text-align: right
 
-/* Featured image */
+//  Featured image
 
 .amp-wp-article-featured-image
-	margin: 0 0 1em
+    margin: 0 0 1em
 
-.amp-wp-article-featured-image amp-img
-	margin: 0 auto
+    amp-img
+        margin: 0 auto
 
-.amp-wp-article-featured-image.wp-caption .wp-caption-text
-	margin: 0 18px
+    .wp-caption
+        .wp-caption-text
+            margin: 0 18px
 
-/* Article Content */
+// Article Content
 
 .amp-wp-article-content
-	margin: 0 16px
+    margin: 0 16px
 
-.amp-wp-article-content ul,
-.amp-wp-article-content ol
-	margin-left: 1em
+    ul,
+    ol
+        margin-left: 1em
 
-.amp-wp-article-content amp-img
-	margin: 0 auto
+    amp-img
+        margin: 0 auto
 
-.amp-wp-article-content amp-img.alignright
-	margin: 0 0 1em 16px
+        .alignright
+            margin: 0 0 1em 16px
 
-.amp-wp-article-content amp-img.alignleft
-	margin: 0 16px 1em 0
+        .alignleft
+            margin: 0 16px 1em 0
 
-/* Captions */
+    amp-carousel
+        amp-img
+            border: 0
+
+// Captions
 
 .wp-caption
-	padding: 0
+    padding: 0
 
-.wp-caption.alignleft
-	margin-right: 16px
+    .alignleft
+        margin-right: 16px
 
-.wp-caption.alignright
-	margin-left: 16px
+    .alignright
+        margin-left: 16px
 
-.wp-caption .wp-caption-text
-	font-size: .875em
-	line-height: 1.5em
-	margin: 0
-	padding: .66em 10px .75em
+    .wp-caption-text
+        font-size: .875em
+        line-height: 1.5em
+        margin: 0
+        padding: .66em 10px .75em
 
-/* AMP Media */
+// AMP Media
 
 amp-carousel
-	margin: 0 -16px 1.5em
+    margin: 0 -16px 1.5em
 
 amp-iframe,
 amp-youtube,
 amp-instagram,
 amp-vine
-	margin: 0 -16px 1.5em
-
-.amp-wp-article-content amp-carousel amp-img
-	border: none
+    margin: 0 -16px 1.5em
 
 amp-carousel > amp-img > img
-	object-fit: contain
+    object-fit: contain
 
 .amp-wp-iframe-placeholder
-	background-size: 48px 48px
-	min-height: 48px
+    background-size: 48px 48px
+    min-height: 48px
 
-/* Article Footer Meta */
+// Article Footer Meta
 
-.amp-wp-article-footer .amp-wp-meta
-	display: block
+.amp-wp-article-footer
+    .amp-wp-meta
+        display: block
 
 .amp-wp-tax-category,
 .amp-wp-tax-tag
-	font-size: .875em
-	line-height: 1.5em
-	margin: 1.5em 16px
+    font-size: .875em
+    line-height: 1.5em
+    margin: 1.5em 16px
 
 .amp-wp-comments-link
-	font-size: .875em
-	line-height: 1.5em
-	text-align: center
-	margin: 2.25em 0 1.5em
+    font-size: .875em
+    line-height: 1.5em
+    margin: 2.25em 0 1.5em
+    text-align: center
 
-.amp-wp-comments-link a
-	border-style: solid
-	border-width: 1px 1px 2px
-	border-radius: 4px
-	background-color: transparent
-	cursor: pointer
-	display: block
-	font-size: 14px
-	font-weight: 600
-	line-height: 18px
-	margin: 0 auto
-	max-width: 200px
-	padding: 11px 16px
-	text-decoration: none
-	width: 50%
-	-webkit-transition: background-color 0.2s ease
-			transition: background-color 0.2s ease
+    a
+        background-color: transparent
+        border-radius: 4px
+        border-style: solid
+        border-width: 1px 1px 2px
+        cursor: pointer
+        display: block
+        font-size: 14px
+        font-weight: 600
+        line-height: 18px
+        margin: 0 auto
+        max-width: 200px
+        padding: 11px 16px
+        text-decoration: none
+        transition: background-color .2s ease
+        width: 50%
 
-/* AMP Footer */
+// AMP Footer
 
 .amp-wp-footer
-	margin: calc(1.5em - 1px) 0 0
+    margin: calc(1.5em - 1px) 0 0
 
-.amp-wp-footer div
-	margin: 0 auto
-	max-width: calc(840px - 32px)
-	padding: 1.25em 16px 1.25em
-	position: relative
+    div
+        margin: 0 auto
+        max-width: calc(840px - 32px)
+        padding: 1.25em 1em
+        position: relative
 
-.amp-wp-footer h2
-	font-size: 1em
-	line-height: 1.375em
-	margin: 0 0 .5em
+    h2
+        font-size: 1em
+        line-height: 1.375em
+        margin: 0 0 .5em
 
+    p
+        font-size: .8em
+        line-height: 1.5em
+        margin: 0 85px 0 0
 
-.amp-wp-footer p
-	font-size: .8em
-	line-height: 1.5em
-	margin: 0 85px 0 0
+    a
+        text-decoration: none
 
-.amp-wp-footer a
-	text-decoration: none
+.card-footer
+    padding: $spacer
 
 .back-to-top
-	bottom: 1.275em
-	font-size: .8em
-	font-weight: 600
-	line-height: 2em
-	position: absolute
-	right: 16px
+    bottom: 1.275em
+    font-size: .8em
+    font-weight: 600
+    line-height: 2em
+    position: absolute
+    right: 16px
