--- a/src/css/components/_typography.sass
+++ b/src/css/components/_typography.sass
@@ -3,6 +3,9 @@ h1, h2, h3, h4, h5, h6
 		family: "Roboto", "Helvetica", "Arial", "sans-serif"
 		weight: normal
 
+h2
+	font-size: 1.5 * $font-size-base
+
 // Card title
 .card-title
 	text-align: left
