--- a/src/css/layout/_card.sass
+++ b/src/css/layout/_card.sass
@@ -1,5 +1,6 @@
-.card-wrapper, .card-deck-wrapper
-	margin-bottom: $spacer * 1.75
+.card-wrapper,
+.card-deck-wrapper
+    margin-bottom: $spacer * 1.75
 
 .card
 	box-shadow: $card-shadow
