--- a/src/css/layout/_container.sass
+++ b/src/css/layout/_container.sass
@@ -40,9 +40,9 @@ ul
 		max-width: $content-max-width
 
 // IE 8 - 10
-@media screen\0
-	@import "components/ie-no-flexbox"
+// @media screen\0
+// 	@import "components/ie-no-flexbox"
 
 // IE 6 - 7
-@media screen\9
-	@import "components/ie-no-flexbox"
+// @media screen\9
+// 	@import "components/ie-no-flexbox"
