--- a/src/css/layout/_header.sass
+++ b/src/css/layout/_header.sass
@@ -1,10 +1,10 @@
 // Brand logo
 .custom-logo-link
-	max-height: $spacer * 2
+	max-height: $spacer * 3
 	margin-right: $spacer
 
 	.custom-logo
-		max-height: $spacer * 2
+		max-height: $spacer * 3
 		width: auto
 
 header
@@ -22,6 +22,9 @@ header
 
 			.header-icons
 				flex: 1
+
+.navbar.navbar-toggleable-md .navbar-nav.navbar-nav-left.mds-active
+	background: white
 
 @include media-breakpoint-up(sm)
 	header nav .container-fluid
