Updated SASS files

--- a/src/css/wp-admin.sass
+++ b/src/css/wp-admin.sass
@@ -1,19 +1,23 @@
 // Variables
-@import "variables"
+@import 'variables'
+
+@import '../../node_modules/bootstrap/scss/functions'
+@import '../../node_modules/bootstrap/scss/variables'
 
 // Font Awesome
-@import "../../node_modules/font-awesome/scss/font-awesome"
+@import '../../node_modules/font-awesome/scss/font-awesome'
 
-input.widget-checkhox
+
+.widget-checkhox
     display: none
 
 .fa
+    color: $gray-200
     cursor: pointer
-    color: #ccc
     text-align: center
     width: 4rem
 
     &.fa-active
-        @each $profile, $color in $socialProfiles
+        @each $profile, $color in $social-profiles
             &.fa-#{$profile}
                 color: $color
