--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -9,7 +9,7 @@
 // //
 //
 // // stylelint-disable
-// $white:    #fff !default
+$white:    #fff
 // $gray-100: #f8f9fa !default
 // $gray-200: #e9ecef !default
 // $gray-300: #dee2e6 !default
@@ -19,8 +19,8 @@
 // $gray-700: #495057 !default
 // $gray-800: #343a40 !default
 // $gray-900: #212529 !default
-// $black:    #000 !default
-//
+$black:    #000
+
 // $grays: () !default
 // $grays: map-merge((
 //   '100': $gray-100,
@@ -232,7 +232,7 @@ $body-color:                #292b2c
 // $font-family-base:            $font-family-sans-serif !default
 // // stylelint-enable value-keyword-case
 //
-// $font-size-base:              1rem !default
+$font-size-base:              1rem !default
 // $font-size-lg:                ($font-size-base * 1.25) !default
 // $font-size-sm:                ($font-size-base * .875) !default
 //
